// Message API provides CRUD operations for managing messages within Construct.
// Messages represent individual communications in conversations between users and AI agents.
// Each message belongs to a task and tracks content, role, usage metrics, and associated costs.
syntax = "proto3";

package construct.v1;

import "buf/validate/validate.proto";
import "construct/v1/common.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/furisto/construct/api/go/v1";

// MessageService provides operations for managing messages.
// Messages are individual communications within tasks, representing exchanges
// between users and AI agents in conversational workflows.
service MessageService {
  // CreateMessage creates a new message within a task.
  rpc CreateMessage(CreateMessageRequest) returns (CreateMessageResponse) {}

  // GetMessage retrieves a specific message by its unique identifier.
  rpc GetMessage(GetMessageRequest) returns (GetMessageResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // ListMessages retrieves a list of messages with optional filtering and pagination.
  rpc ListMessages(ListMessagesRequest) returns (ListMessagesResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  // UpdateMessage modifies an existing message's content.
  rpc UpdateMessage(UpdateMessageRequest) returns (UpdateMessageResponse) {}

  // DeleteMessage removes a message from the system.
  rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse) {}
}

// Message represents a complete message entity with metadata, specification, and status.
message Message {
  // metadata contains system-managed, immutable information about the message.
  MessageMetadata metadata = 1;

  // spec contains the user-configurable specification of the message.
  MessageSpec spec = 2;

  // status contains the observed state and usage information of the message.
  MessageStatus status = 3;
}

// MessageMetadata contains system-managed, immutable information about a message.
message MessageMetadata {
  // id is the unique identifier for the message (UUID format).
  string id = 1 [(buf.validate.field).string.uuid = true];

  // created_at is the timestamp when the message was created.
  google.protobuf.Timestamp created_at = 2 [(buf.validate.field).required = true];

  // updated_at is the timestamp when the message was last modified.
  google.protobuf.Timestamp updated_at = 3 [(buf.validate.field).required = true];

  // task_id references the task this message belongs to (UUID format).
  string task_id = 4 [(buf.validate.field).string.uuid = true];

  // agent_id references the agent that generated this message, if applicable (UUID format, optional).
  optional string agent_id = 5 [(buf.validate.field).string.uuid = true];

  // model_id references the AI model used to generate this message, if applicable (UUID format, optional).
  optional string model_id = 6 [(buf.validate.field).string.uuid = true];

  // role indicates whether this message came from a user or assistant.
  MessageRole role = 7;
}

// MessageSpec defines the user-configurable specification of a message.
message MessageSpec {
  // content contains the actual message content (text, images, etc.).
  repeated MessagePart content = 1;
}

// MessageStatus contains the observed state and usage information of the message.
message MessageStatus {
  // usage tracks resource consumption and costs associated with generating this message.
  MessageUsage usage = 1;
}

// MessageRole indicates the source/author of a message in the conversation.
enum MessageRole {
  // MESSAGE_ROLE_UNSPECIFIED indicates an unknown or unset message role.
  MESSAGE_ROLE_UNSPECIFIED = 0;

  // MESSAGE_ROLE_USER indicates the message was sent by a human user.
  MESSAGE_ROLE_USER = 1;

  // MESSAGE_ROLE_ASSISTANT indicates the message was generated by an AI assistant/agent.
  MESSAGE_ROLE_ASSISTANT = 2;
}

// MessagePart contains the actual content of a message, supporting different content types.
message MessagePart {
  message Text {
    string content = 1 [
      (buf.validate.field).string.min_len = 1,
      (buf.validate.field).string.max_len = 65536
    ];
  }

  message ToolResult {
    string tool_name = 1 [(buf.validate.field).required = true];
    map<string, string> arguments = 2;
    string result = 3;
    string error = 4;
  }

  // content holds the message payload in various formats.
  oneof data {
    // text contains plain text message content.
    Text text = 1;

    // tool_result contains the result of a tool call.
    ToolResult tool_result = 2;
  }
}

// MessageUsage tracks resource consumption and associated costs for generating a message.
message MessageUsage {
  // input_tokens is the number of input tokens consumed to generate this message.
  int64 input_tokens = 1;

  // output_tokens is the number of output tokens generated in this message.
  int64 output_tokens = 2;

  // cache_write_tokens is the number of tokens written to cache during message generation.
  int64 cache_write_tokens = 3;

  // cache_read_tokens is the number of tokens read from cache during message generation.
  int64 cache_read_tokens = 4;

  // cost is the monetary cost associated with generating this message.
  double cost = 5;
}

// CreateMessageRequest contains the parameters needed to create a new message.
message CreateMessageRequest {
  // task_id references the task this message will belong to (UUID format).
  string task_id = 1 [(buf.validate.field).string.uuid = true];

  // content is the content of the message.
  repeated MessagePart content = 2 [
    (buf.validate.field).repeated.min_items = 1,
    (buf.validate.field).repeated.max_items = 25
  ];
}

// CreateMessageResponse contains the newly created message.
message CreateMessageResponse {
  // message is the newly created message instance.
  Message message = 1 [(buf.validate.field).required = true];
}

// GetMessageRequest specifies which message to retrieve.
message GetMessageRequest {
  // id is the unique identifier of the message to retrieve (UUID format).
  string id = 1 [(buf.validate.field).string.uuid = true];
}

// GetMessageResponse contains the requested message.
message GetMessageResponse {
  // message is the requested message instance.
  Message message = 1 [(buf.validate.field).required = true];
}

// ListMessagesRequest specifies parameters for listing messages with optional filtering and pagination.
message ListMessagesRequest {
  // Filter specifies criteria for narrowing the list of returned messages.
  message Filter {
    // task_ids filters messages by the tasks they belong to (UUID format, optional).
    optional string task_ids = 1 [(buf.validate.field).repeated.items.string.uuid = true];

    // agent_ids filters messages by the agents that generated them (UUID format, optional).
    optional string agent_ids = 2 [(buf.validate.field).repeated.items.string.uuid = true];

    // roles filters messages by their role (user or assistant, optional).
    optional MessageRole roles = 3 [(buf.validate.field).repeated.items.enum.defined_only = true];
  }

  // filter specifies criteria for narrowing the results.
  Filter filter = 1;

  // page_size limits the number of messages returned per page (1-100).
  optional int32 page_size = 2 [
    (buf.validate.field).int32.gte = 1,
    (buf.validate.field).int32.lte = 100
  ];

  // page_token is used for pagination to retrieve subsequent pages.
  string page_token = 3 [(buf.validate.field).string.max_len = 255];

  // sort_field specifies which field to sort results by.
  optional SortField sort_field = 4 [(buf.validate.field).enum.defined_only = true];

  // sort_order specifies the sorting direction (ascending or descending).
  optional SortOrder sort_order = 5 [(buf.validate.field).enum.defined_only = true];
}

// ListMessagesResponse contains the list of messages matching the request criteria.
message ListMessagesResponse {
  // messages is the list of messages matching the filter criteria.
  repeated Message messages = 1;

  // next_page_token is used to retrieve the next page of results (empty if no more pages).
  string next_page_token = 2;
}

// UpdateMessageRequest specifies which message to update and the new content.
message UpdateMessageRequest {
  // id is the unique identifier of the message to update (UUID format).
  string id = 1 [(buf.validate.field).string.uuid = true];

  // content is the new content for the message.
  repeated MessagePart content = 2 [
    (buf.validate.field).repeated.min_items = 1,
    (buf.validate.field).repeated.max_items = 25
  ];
}

// UpdateMessageResponse contains the updated message.
message UpdateMessageResponse {
  // message is the updated message instance.
  Message message = 1 [(buf.validate.field).required = true];
}

// DeleteMessageRequest specifies which message to delete.
message DeleteMessageRequest {
  // id is the unique identifier of the message to delete (UUID format).
  string id = 1 [(buf.validate.field).string.uuid = true];
}

// DeleteMessageResponse confirms the message deletion (empty response).
message DeleteMessageResponse {}
